[workspace]
members = [ "Anchor","programs/adaptive_cpamm"]

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"

[features]
no-entrypoint = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token", "associated_token"] }

[dev-dependencies]
solana-program-test = "1.18.21"
solana-sdk = "1.18.21"
